--- a/TextBasedFishing/style.css
+++ b/TextBasedFishing/style.css
@@ -53,7 +53,7 @@ img{
     width: 98.5%;
     height: 300px;
     
-    background-color: #0f0d0e;
+    background-color: #000000;
     border: 1px solid white;
     margin: 3px;
 
